# PyPalette

./: README.md  pyproject.toml
PyPalette/: color_extraction.py  utils.py
